--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ background: '/img/bg-index.jpg'
 <!-- Home Intro
 ================================================== -->
 {% if page.url == "/" %} 
-<div class="rounded mb-5 hero">
+<div class="jumbotron">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Let us teach you about robotics</h1>
